--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,15 @@
 <html>
   <header>
     <meta charset="UTF-8">
+    <title>サイトトップ</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
   </header>
   <body>
-  index.htmlですよ
+    <div id="container"></div>
+    <script type="text/babel" src="jsx/list.jsx"></script>
   </body>
 </html>
